<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#D6D3DE"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <View

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view"
        android:background="@color/primary_color"
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_pb"
        tools:text="erroalsjdnjasgbhsbhsbbsigwuguwwheiwerhuwehrjwrejwernjwrjwrebwjewheuwerr" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:id="@+id/retry_btn"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:cornerRadius="15dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/error_tv" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/city_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="TextView"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/details_imv"
                android:layout_width="94dp"
                android:layout_height="77dp"
                android:src="@drawable/location_city"
                android:layout_marginTop="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_name_tv" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/description"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/description_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/description_tv" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="32dp"
                android:text="TextView"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_imv" />

            <TextView
                android:id="@+id/temperature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/temperature"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/temperature_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/temperature_tv" />

            <TextView
                android:id="@+id/temperature_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="TextView"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_tv" />

            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/humidity"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/humidity_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/humidity_tv" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="TextView"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature_tv" />

            <TextView
                android:id="@+id/windspeed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/windspeed"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/windspeed_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/windspeed_tv" />

            <TextView
                android:id="@+id/windspeed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="30dp"
                android:text="TextView"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:scaleType="fitXY"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/group" />

</androidx.constraintlayout.widget.ConstraintLayout>